Source/WebCore/inspector/InspectorClient.cpp
@@ -31,11 +31,14 @@
 #include "config.h"
 #include "InspectorClient.h"
 
+#include "InspectorController.h"
 #include "MainFrame.h"
 #include "Page.h"
 #include "ScriptController.h"
 #include "ScriptSourceCode.h"
+#include <interpreter/FrameTracers.h>
 
+using namespace JSC;
 using namespace Inspector;
 
 namespace WebCore {
@@ -45,6 +48,7 @@ void InspectorClient::doDispatchMessageOnFrontendPage(Page* frontendPage, const 
     if (!frontendPage)
         return;
 
+    SuspendExceptionScope scope(&frontendPage->inspectorController().vm());
     String dispatchToFrontend = makeString("InspectorFrontendAPI.dispatchMessageAsync(", message, ");");
     frontendPage->mainFrame().script().evaluate(ScriptSourceCode(dispatchToFrontend));
 }
